fix(css-components): remove broken style

--- a/css-components/components-src/stylus/components/list.styl
+++ b/css-components/components-src/stylus/components/list.styl
@@ -188,6 +188,7 @@ list__item()
   margin-top -1px
   text-transform uppercase
   font-size 12px
+  position relative
 
 .list__header:first-child
   retina-list-header-border()
@@ -208,7 +209,6 @@ list__item()
   color var-list-item-color
   background-color var-list-background-color
   min-height var-list-item-min-height
-  z-index -1
 
 .list__item:first-child
   box-shadow inset 0px 1px 0px 0px var-list-item-separator-color
